# rdfconverter

./: Limes_Coordinates_Kleinkastell.geojson  Limes_Coordinates_Kleinkastell.ttl  Limes_Coordinates_Kleinkastell_mapping_limes.json  Limes_Coordinates_Kleinkastell_mapping_limes.ttl  Limes_Coordinates_Kleinkastell_mapping_limes_ont.ttl  Limes_Coordinates_Kleinkastell_mapping_sampleempty.json  Limes_Coordinates_Kleinkastell_mapping_sampleempty.ttl  Limes_Coordinates_Kleinkastell_mapping_sampleempty_ont.ttl  Limes_Coordinates_Kleinkastellautotypemap.json  README.md  action.yml  index.html  pyproject.toml
.github/workflows/: demo.yml  geordfconvert.yml
mapping/: limes.json  sample.json  sampleempty.json
src/: rdfconverter.py
